# Txt2Speech-Speech2Txt-Multilingual-Agent

./: .gitignore  LICENSE  README.md
voice-agent/: pyproject.toml
voice-agent/core/interfaces/: llm_interface.py  stt_interface.py  tts_interface.py
voice-agent/core/service/: __init__.py
voice-agent/core/services/: stt_service.py  translation_service.py  tts_service.py  vad_service.py
voice-agent/infra/audio/: __init__.py  buffer.py  recorder.py
voice-agent/infra/llm/: ollama_llm.py
voice-agent/infra/stt/: whisper_stt.py
voice-agent/infra/tts/: edge_tts.py
voice-agent/test/: test_audio.py  test_llm.py  test_stt.py  test_tts.py
