[project]
name = "voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "edge-tts>=7.2.8",
    "faster-whisper>=1.2.1",
    "librosa>=0.11.0",
    "numpy>=1.24",
    "pydub>=0.25.1",
    "scipy>=1.10",
    "sounddevice>=0.5.5",
    "webrtcvad-wheels>=2.0.14",
]
